[metadata]
name = tpms_matcher
version = attr: tpms_matcher.__version__
url = https://github.com/imranur-rahman/tpms_matcher
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
license = BSD 2 Clause
license_files = LICENSE
description = Search top security and software engineering papers plus TPMS-style reviewer matching
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    sqlalchemy >= 1.4
    colorlog
    beautifulsoup4
    nltk
    selenium
    requests
    markitdown[pdf]
    scikit-learn
    tqdm
python_requires = >= 3.8
packages = find:

[options.entry_points]
console_scripts =
    tpms-matcher = tpms_matcher.__main__:main
